fix stupid naming of django app main folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   django:
-    build: ./djangoApp/
+    build: django-app/
     restart: on-failure
     volumes:
       - ./data/images:/app/images
