refactor from postgres to sqlite for simpler db usage

--- a/django-app/Dockerfile
+++ b/django-app/Dockerfile
@@ -15,5 +15,7 @@ CMD echo "waiting 5sec to startup db .." && \
     python manage.py makemigrations scraper && \
     python manage.py migrate && \
     python manage.py runserver 0.0.0.0:8000
-#  [ "python", "manage.py", "runserver", "0.0.0.0:8000" ]
+#    echo "running" && tail -f /dev/null
+
+
 #ENTRYPOINT ["top", "-b"]
