--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     restart: on-failure
     volumes:
       - ./data/images:/app/images
+      - ./data/database/sqlite:/app/sqlite
       - ./django-app/scraper/migrations:/app/scraper/migrations
     environment:
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
@@ -11,8 +12,8 @@ services:
       - "8000:8000"
     networks:
       - ca-network
-    depends_on:
-      - db
+#    depends_on:
+#      - db
 #      - tesseract
     develop:
       watch:
@@ -23,20 +24,21 @@ services:
             - "*.pyc"
             - "__pycache__"
             - "migrations/*"
+            - "sqlite/*"
         - action: rebuild
           path: ./django-app/requirements.txt
 
-  db:
-    image: postgres:16
-    restart: on-failure
-    volumes:
-      - ./data/database:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    networks:
-      - ca-network
+#  db:
+#    image: postgres:16
+#    restart: on-failure
+#    volumes:
+#      - ./data/database/postgresql:/var/lib/postgresql/data
+#    environment:
+#      POSTGRES_USER: ${POSTGRES_USER}
+#      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+#      POSTGRES_DB: ${POSTGRES_DB}
+#    networks:
+#      - ca-network
 
 #  tesseract:
 #    build: ./llm/tesseract/tesseract-server-master #tesseract-ocr-5.5.0-r0
