add img dir and name to db

--- a/django-app/Dockerfile
+++ b/django-app/Dockerfile
@@ -12,7 +12,7 @@ COPY . .
 
 CMD echo "waiting 5sec to startup db .." && \
     sleep 5 && \
-    python manage.py makemigrations scraper && \
+#    python manage.py makemigrations scraper && \
     python manage.py migrate && \
     python manage.py runserver 0.0.0.0:8000
 #    echo "running" && tail -f /dev/null
