--- a/django-app/Dockerfile
+++ b/django-app/Dockerfile
@@ -3,7 +3,18 @@ FROM python:3.12
 WORKDIR /app
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends
+    apt-get install -y --no-install-recommends \
+    build-essential \
+    curl && \
+    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
+    export PATH="$HOME/.cargo/bin:$PATH" && \
+    echo 'export PATH="$HOME/.cargo/bin:$PATH"' >> ~/.bashrc
+
+# Install pip and upgrade it to the latest version
+RUN pip install --upgrade pip
+
+# Install PyTorch
+RUN pip install torch==2.5.1
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
@@ -12,10 +23,5 @@ COPY . .
 
 CMD echo "waiting 5sec to startup db .." && \
     sleep 5 && \
-#    python manage.py makemigrations scraper && \
     python manage.py migrate && \
     python manage.py runserver 0.0.0.0:8000
-#    echo "running" && tail -f /dev/null
-
-
-#ENTRYPOINT ["top", "-b"]
